Add logo to header and PWA manifest
- Added logo.png to header next to FurkAI title
- Added logo styling with proper sizing and border-radius
- Updated manifest.json to use logo.png as primary PWA icon
- Added logo to Service Worker cache
- Logo now appears in header and when adding to home screen on iPhone

--- a/index.html
+++ b/index.html
@@ -41,7 +41,10 @@
         <header class="app-header">
             <div class="header-content">
                 <div class="header-left">
-                    <h1 class="app-title">FurkAI</h1>
+                    <h1 class="app-title">
+                        <img src="icons/logo.png" alt="FurkAI Logo" class="app-logo">
+                        FurkAI
+                    </h1>
                     <div class="header-subtitle" id="page-title">Ana Ekran</div>
                 </div>
                 <div class="header-actions">
