--- a/index.html
+++ b/index.html
@@ -137,6 +137,7 @@
     <script src="js/core/page-manager.js"></script>
     <script src="js/core/notification-manager.js"></script>
     <script src="js/core/ai-service.js"></script>
+    <script src="js/core/theme-manager.js"></script>
     <script src="js/core/tutorial-manager.js"></script>
     <script src="js/modules/yemek.js"></script>
     <script src="js/modules/spor.js"></script>
